--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     // s3 파일 업로드
     implementation 'software.amazon.awssdk:s3:2.22.12'
+    implementation 'software.amazon.awssdk:apache-client:2.22.12' // ApacheHttpClient 의존성 추가
 
     // @NotBlank 어노테이션을 달기 위해 추가
     implementation 'org.springframework.boot:spring-boot-starter-validation'
